[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/PopUp/SelectTeam.gd" type="Script" id=1]
[ext_resource path="res://Resources/Fonts/Bosk_32_1.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/PNG/UI/Menu/MiniMenu.png" type="Texture" id=3]
[ext_resource path="res://assets/Bosk.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Resources/Theme/Login.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 62
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="SelectTeam" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Background" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -267.0
margin_top = -154.5
margin_right = 267.0
margin_bottom = 154.5
rect_min_size = Vector2( 400, 250 )
texture = ExtResource( 3 )

[node name="TeamScreen" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 5.0
margin_right = -35.0
margin_bottom = -45.0

[node name="Title" type="Label" parent="Background/TeamScreen"]
margin_right = 464.0
margin_bottom = 63.0
custom_fonts/font = SubResource( 1 )
text = "Choose team"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/TeamScreen"]
margin_top = 67.0
margin_right = 464.0
margin_bottom = 98.242
rect_min_size = Vector2( 0, 31.242 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ships" type="HBoxContainer" parent="Background/TeamScreen"]
margin_top = 102.0
margin_right = 464.0
margin_bottom = 152.0
alignment = 1

[node name="StandardShipButton" type="Button" parent="Background/TeamScreen/Ships"]
margin_left = 10.0
margin_right = 230.0
margin_bottom = 50.0
rect_min_size = Vector2( 220, 50 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Standard ship"

[node name="ShipWithGunButton" type="Button" parent="Background/TeamScreen/Ships"]
margin_left = 234.0
margin_right = 454.0
margin_bottom = 50.0
rect_min_size = Vector2( 220, 50 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
toggle_mode = true
text = "Ship with gun"

[node name="Confirm" type="Button" parent="Background/TeamScreen"]
margin_left = 122.0
margin_top = 156.0
margin_right = 342.0
margin_bottom = 206.0
rect_min_size = Vector2( 220, 50 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Background/TeamScreen/Ships/StandardShipButton" to="." method="_on_StandardShipButton_pressed"]
[connection signal="pressed" from="Background/TeamScreen/Ships/ShipWithGunButton" to="." method="_on_ShipWithGunButton_pressed"]
[connection signal="pressed" from="Background/TeamScreen/Confirm" to="." method="_on_Confirm_pressed"]
